feat: add docs login oauth & fix routing
